# VibeSense

./: .gitignore  Faishon_Dataset_Yolov8.ipynb  README.md  catalog_metadata.csv  clip_embedding.py  cropped_yolo.py  faiss_data_extract.py  main.py  pyproject.toml  vibe_extraction.py
outputs/2025-05-22_08-25-12_UTC/: 2025-05-22_08-25-12_UTC_final.json
outputs/2025-05-27_13-46-16_UTC/: 2025-05-27_13-46-16_UTC_final.json
outputs/2025-05-28_13-40-09_UTC/: 2025-05-28_13-40-09_UTC_final.json
outputs/2025-05-28_13-42-32_UTC/: 2025-05-28_13-42-32_UTC_final.json
outputs/2025-05-31_14-01-37_UTC/: 2025-05-31_14-01-37_UTC_final.json
outputs/2025-06-02_11-31-19_UTC/: 2025-06-02_11-31-19_UTC_final.json
